--- a/public/admin.html
+++ b/public/admin.html
@@ -37,15 +37,13 @@
         </p>
     </div> -->
     <div class="app">
-        <!-- LUU SY TRUONG -->
-        <div class="header">
+        <!-- <div class="header">
             <div class="header__inner">
                 <div class="header__inner__logo">
                     <a href="">
                         <h1>GYM<span>Z</span></h1>
                     </a>
                 </div>
-                <!-- Thanh dieu huong -->
                 <div class="header__inner__navigation">
                     <ul>
                         <li><a class="header__inner__navigation__sevice" href="../index.html">TRANG CHỦ</a></li>
@@ -90,7 +88,6 @@
                                         GYMZ001
                                     </a>
                                 </div>
-                                <!-- <img src="../img/background/logo_and_bgr.png" alt="logo and bgr"> -->
                             </div>
                             <a class="content__inner" href="../index.html">
                                 <i class='bx bxs-home'></i>
@@ -125,7 +122,6 @@
                             </a>
                             <div class="content__logout">
                                 <a class="content__logout__btn content__inner">
-                                    <!-- <i class='bx bx-code-alt'></i> -->
                                     <i class="bxf fa-solid fa-right-from-bracket"></i>
                                     <span class="noidung__text1">
                                         ĐĂNG XUẤT
@@ -136,7 +132,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <div class="container">
             <!-- <div class="grid1"> -->
             <div class="container__box">
