--- a/public/admin.html
+++ b/public/admin.html
@@ -792,12 +792,22 @@
                     </div>
                     <div class="row row__edit">
                         <div class="row__title">
+                            Mã khách hàng:
+                        </div>
+                        <div class="row__content row__content__edit">
+                            <span class="row__content__input" name="maKH"></span>
+                            <i class="fa-solid fa-arrow-right"></i>
+                            <input class="row__content__input" type="text" placeholder="....." value="" name="maKH" readonly>
+                        </div>
+                    </div>
+                    <div class="row row__edit">
+                        <div class="row__title">
                             Tên khách hàng:
                         </div>
                         <div class="row__content row__content__edit">
                             <span class="row__content__input">Ngô Gia Quyến</span>
                             <i class="fa-solid fa-arrow-right"></i>
-                            <input class="row__content__input" type="text" placeholder="....." name="fullname">
+                            <input class="row__content__input" type="text" placeholder="....." name="name">
                         </div>
                     </div>
 
@@ -820,6 +830,108 @@
                             <span class="row__content__input">Abc@123</span>
                             <i class="fa-solid fa-arrow-right"></i>
                             <input class="row__content__input" type="text" placeholder="....." name="password">
+                        </div>
+                    </div>
+                    <span class="row__note">Bỏ trống nếu không thay đổi</span>
+                    <div class="row__final">
+                        <div class="row__final__button">
+                            <button class="button__form" type="submit">
+                                Sửa thông tin
+                            </button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+            <div class="modal__body__box modal__body__box--admin admin-edit-card">
+                <form id="form-edit-card" class="form2">
+                    <div class="row__title__table">
+                        <div class="row__title__table__content">
+                            Sửa thông tin thẻ thành viên
+                        </div>
+                        <div class="x__cancel">
+                            <i class="fa-regular fa-circle-xmark"></i>
+                        </div>
+                    </div>
+                    <div class="row row__edit">
+                        <div class="row__title">
+                            Mã thẻ:
+                        </div>
+                        <div class="row__content row__content__edit">
+                            <span class="row__content__input" name="maKH"></span>
+                            <i class="fa-solid fa-arrow-right"></i>
+                            <input class="row__content__input" type="text" placeholder="....." value="" name="maThe" readonly>
+                        </div>
+                    </div>
+                    <div class="row row__edit">
+                        <div class="row__title">
+                            Mã khách hàng:
+                        </div>
+                        <div class="row__content row__content__edit">
+                            <span class="row__content__input" name="maKH"></span>
+                            <i class="fa-solid fa-arrow-right"></i>
+                            <input class="row__content__input" type="text" placeholder="....." value="" name="maKH" readonly>
+                        </div>
+                    </div>
+                    <div class="row row__edit">
+                        <div class="row__title">
+                            Tên khách hàng:
+                        </div>
+                        <div class="row__content row__content__edit">
+                            <span class="row__content__input">Ngô Gia Quyến</span>
+                            <i class="fa-solid fa-arrow-right"></i>
+                            <input class="row__content__input" type="text" placeholder="....." name="name">
+                        </div>
+                    </div>
+
+                    <div class="row row__edit">
+                        <div class="row__title">
+                            Ngày sinh:
+                        </div>
+                        <div class="row__content row__content__edit">
+                            <span class="row__content__input">quyen@gmail.com</span>
+                            <i class="fa-solid fa-arrow-right"></i>
+                            <input class="row__content__input" type="text" placeholder="....." name="dateOfBirth">
+                        </div>
+                    </div>
+
+                    <div class="row row__edit">
+                        <div class="row__title">
+                            SĐT:
+                        </div>
+                        <div class="row__content row__content__edit">
+                            <span class="row__content__input">Abc@123</span>
+                            <i class="fa-solid fa-arrow-right"></i>
+                            <input class="row__content__input" type="text" placeholder="....." name="phoneNumber">
+                        </div>
+                    </div>
+                    <div class="row row__edit">
+                        <div class="row__title">
+                            Loại thẻ:
+                        </div>
+                        <div class="row__content row__content__edit">
+                            <span class="row__content__input">Abc@123</span>
+                            <i class="fa-solid fa-arrow-right"></i>
+                            <input class="row__content__input" type="text" placeholder="....." name="cardType">
+                        </div>
+                    </div>
+                    <div class="row row__edit">
+                        <div class="row__title">
+                            Ngày mua:
+                        </div>
+                        <div class="row__content row__content__edit">
+                            <span class="row__content__input">Abc@123</span>
+                            <i class="fa-solid fa-arrow-right"></i>
+                            <input class="row__content__input" type="text" placeholder="....." name="dateStart">
+                        </div>
+                    </div>
+                    <div class="row row__edit">
+                        <div class="row__title">
+                            Ngày mua:
+                        </div>
+                        <div class="row__content row__content__edit">
+                            <span class="row__content__input">Abc@123</span>
+                            <i class="fa-solid fa-arrow-right"></i>
+                            <input class="row__content__input" type="text" placeholder="....." name="dateEnd">
                         </div>
                     </div>
                     <span class="row__note">Bỏ trống nếu không thay đổi</span>
