css form edit card

--- a/public/admin.html
+++ b/public/admin.html
@@ -868,7 +868,7 @@
                             <input class="row__content__input" type="text" placeholder="....." value="" name="maKH" readonly>
                         </div>
                     </div>
-                    <div class="row row__edit">
+                    <div class="row row__edit" style="display: none">
                         <div class="row__title">
                             Tên khách hàng:
                         </div>
@@ -949,7 +949,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-    <script src="../navigation_javascript/menuv2.js"></script>
+    <!-- <script src="../navigation_javascript/menuv2.js"></script> -->
     <script src="./src/app.js"></script>
     <script type="module" src="./admin.js"></script>
 </body>
