done edit account, card, calendar

--- a/public/admin.html
+++ b/public/admin.html
@@ -940,6 +940,118 @@
                     </div>
                 </form>
             </div>
+            <div class="modal__body__box modal__body__box--admin admin-edit-calendar">
+                <form id="form-edit-calendar" class="form2">
+                    <div class="row__title__table">
+                        <div class="row__title__table__content">
+                            Sửa thông tin thẻ thành viên
+                        </div>
+                        <div class="x__cancel">
+                            <i class="fa-regular fa-circle-xmark"></i>
+                        </div>
+                    </div>
+                    <div class="row row__edit">
+                        <div class="row__title">
+                            Mã Lịch tập:
+                        </div>
+                        <div class="row__content row__content__edit">
+                            <span class="row__content__input" name="maKH"></span>
+                            <i class="fa-solid fa-arrow-right"></i>
+                            <input class="row__content__input" type="text" placeholder="....." value="" name="maLT" readonly>
+                        </div>
+                    </div>
+                    <div class="row row__edit">
+                        <div class="row__title">
+                            Mã thẻ:
+                        </div>
+                        <div class="row__content row__content__edit">
+                            <span class="row__content__input" name="maKH"></span>
+                            <i class="fa-solid fa-arrow-right"></i>
+                            <input class="row__content__input" type="text" placeholder="....." value="" name="maThe" readonly>
+                        </div>
+                    </div>
+                    <div class="row row__edit" style="display: none">
+                        <div class="row__title">
+                            Tên khách hàng:
+                        </div>
+                        <div class="row__content row__content__edit">
+                            <span class="row__content__input">Ngô Gia Quyến</span>
+                            <i class="fa-solid fa-arrow-right"></i>
+                            <input class="row__content__input" type="text" placeholder="....." name="name">
+                        </div>
+                    </div>
+
+                    <div class="row row__edit">
+                        <div class="row__title">
+                            Ngày tập:
+                        </div>
+                        <div class="row__content row__content__edit">
+                            <span class="row__content__input">quyen@gmail.com</span>
+                            <i class="fa-solid fa-arrow-right"></i>
+                            <input class="row__content__input" type="text" placeholder="....." name="date">
+                        </div>
+                    </div>
+
+                    <div class="row row__edit">
+                        <div class="row__title">
+                            TG bắt đầu:
+                        </div>
+                        <div class="row__content row__content__edit">
+                            <span class="row__content__input">Abc@123</span>
+                            <i class="fa-solid fa-arrow-right"></i>
+                            <input class="row__content__input" type="text" placeholder="....." name="timeStart">
+                        </div>
+                    </div>
+                    <div class="row row__edit">
+                        <div class="row__title">
+                            TG kết thúc:
+                        </div>
+                        <div class="row__content row__content__edit">
+                            <span class="row__content__input">Abc@123</span>
+                            <i class="fa-solid fa-arrow-right"></i>
+                            <input class="row__content__input" type="text" placeholder="....." name="timeEnd">
+                        </div>
+                    </div>
+                    <div class="row row__edit">
+                        <div class="row__title">
+                            Bài tập:
+                        </div>
+                        <div class="row__content row__content__edit">
+                            <span class="row__content__input">Abc@123</span>
+                            <i class="fa-solid fa-arrow-right"></i>
+                            <input class="row__content__input" type="text" placeholder="....." name="type">
+                        </div>
+                    </div>
+                    <div class="row row__edit">
+                        <div class="row__title">
+                            Huấn luyện viên:
+                        </div>
+                        <div class="row__content row__content__edit">
+                            <span class="row__content__input">Abc@123</span>
+                            <i class="fa-solid fa-arrow-right"></i>
+                            <input class="row__content__input" type="text" placeholder="....." name="ptName">
+                        </div>
+                    </div>
+                    <div class="row row__edit">
+                        <div class="row__title">
+                            Ghi chú:
+                        </div>
+                        <div class="row__content row__content__edit">
+                            <span class="row__content__input">Abc@123</span>
+                            <i class="fa-solid fa-arrow-right"></i>
+                            <input class="row__content__input" type="text" placeholder="....." name="note">
+                        </div>
+                    </div>
+                    <span class="row__note">Bỏ trống nếu không thay đổi</span>
+                    <div class="row__final">
+                        <div class="row__final__button">
+                            <button class="button__form" type="submit">
+                                Sửa thông tin
+                            </button>
+                        </div>
+                    </div>
+                </form>
+            </div>
         </div>
     </div>
 
